--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:latest
+FROM python:3.9-slim
 
 WORKDIR /app
 
@@ -7,5 +7,7 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 COPY . .
+
+EXPOSE 5000
 
 CMD ["python", "app.py"]
