--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+ENV PIP_ROOT_USER_ACTION=ignore
+
 COPY requirements.txt requirements.txt
 
 RUN pip install --no-cache-dir -r requirements.txt
